# Electron-Python-2

./: .gitignore  .npmrc  CHANGELOG.md  CodingStyle.md  README.md  package-lock.json  package.json  vue.config.js
.scripts/: pre-install.js
public/: index.html
py-api/: Pipfile
py-code/: __scripts.py  pyproject.toml
src/: App.vue  background.js  main.js
src/bg/app-path/: index.js
src/bg/rpc-server/: const.js  index.js
src/plugins/: element.js  index.js
src/plugins/alert-error/: index.js
src/plugins/rpc-client/: client.js  index.js
src/router/: index.js
src/styles/: _colors.scss  font-awesome.css  general.scss  global-variables.scss
src/styles/theme-poetry/: index.css
src/views/: Home.vue  Init.vue
