[tool.poetry]
name = "py-code"
version = "0.1.0"
description = ""
authors = ["Asaki Asako <asakiasako@foxmail.com>"]
packages = [
    { include = "./src/__main__.py" },
    { include = "./__scripts.py" },
]

[tool.poetry.scripts]
build = "__scripts:build"

[tool.poetry.dependencies]
python = "^3.8"
zerorpc = "^0.6.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
pylint = "^2.5.2"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
